--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,36 @@
     tools:context="com.hamidulsarder.visibility.MainActivity"
     >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="test git"
+            android:textSize="50sp"
+            android:layout_margin="20dp"
+            />
+
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="vertical"
+            android:background="@drawable/custom_toolbar"
+            >
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/custom_toolbar"
-
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginTop="24dp"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -32,6 +51,8 @@
                 />
 
         </androidx.appcompat.widget.Toolbar>
+
+        </LinearLayout>
 
 
         <LinearLayout
