--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -7,10 +7,17 @@
     tools:context=".StatusPage">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/custom_toolbar"
+        >
+
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/custom_toolbar"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginTop="24dp"
             >
             <TextView
                 android:id="@+id/toolBar"
@@ -23,6 +30,9 @@
                 android:textStyle="bold"
                 />
         </androidx.appcompat.widget.Toolbar>
+
+
+    </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
